# 🌺💜 Violet: Extended C++ standard library
# Copyright (c) 2025-2026 Noelware, LLC. <team@noelware.org>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//buildsystem/bazel:cc.bzl", "cc_library", "cc_test")

exports_files(
    ["BUILD.bazel"],
    visibility = ["//:__subpackages__"],
)

cc_library(
    name = "demangle",
    srcs = ["//src/support:demangle.cc"],
    hdrs = ["//include/violet/Support:Demangle.h"],
    visibility = ["//visibility:public"],
    deps = ["//violet:macros"],
)

cc_library(
    name = "bitflags",
    hdrs = ["//include/violet/Support:Bitflags.h"],
    visibility = ["//visibility:public"],
    deps = ["//violet"],
)

cc_library(
    name = "terminal",
    srcs = ["//src/support:terminal.cc"] + select({
        "@platforms//os:linux": ["//src/support/platform/terminal:unix.cc"],
        "@platforms//os:macos": ["//src/support/platform/terminal:unix.cc"],
        "@platforms//os:windows": ["//src/support/platform/terminal:windows.cc"],
        "//conditions:default": ["//src/support/platform/terminal:unsupported.cc"],
    }),
    hdrs = ["//include/violet/Support:Terminal.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":bitflags",
        "//violet",
        "//violet/io:error",
        "//violet/system",
        "//violet/system:ci",
    ],
)

cc_test(
    name = "terminal_test",
    srcs = ["//tests/support:Terminal.test.cc"],
    deps = [":terminal"],
)
