# 🌺💜 Violet: Extended standard library for C++26
# Copyright (c) 2025 Noelware, LLC. <team@noelware.org> & other contributors
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//buildsystem/bazel:cc.bzl", "cc_library")

cc_library(
    name = "system",
    srcs = select({
        "@platforms//os:linux": ["//src/system/platform:unix.cc"],
        "@platforms//os:macos": ["//src/system/platform:unix.cc"],
        "@platforms//os:windows": ["//src/system/platform:windows.cc"],
        "//conditions:default": ["//src/system/platform:unsupported.cc"],
    }),
    hdrs = ["//include/violet:System.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//violet",
        "//violet/container",
        "//violet/filesystem:path",
        "//violet/io:error",
    ],
)

cc_library(
    name = "ci",
    srcs = ["//src/system:ci.cc"],
    hdrs = ["//include/violet/System:CI.h"],
    visibility = ["//visibility:public"],
    deps = [":system"],
)
