# 🌺💜 Violet: Extended standard library for C++26
# Copyright (c) 2025 Noelware, LLC. <team@noelware.org> & other contributors
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load(":configs.bzl", "feature", "sanitizer")

# If the `@violet//buildsystem/bazel/configs:win32_dllexport` is defined, it'll mark
# any APIs as `__declspec(dllexport)` instead of `__declspec(dllimport)`.
feature(
    name = "win32_dllexport",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "win32_dllexport_enabled",
    flag_values = {"//buildsystem/bazel/configs:win32_dllexport": "True"},
)

sanitizer(
    name = "asan",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "asan_enabled",
    flag_values = {"//buildsystem/bazel/configs:asan": "True"},
)

sanitizer(
    name = "msan",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "msan_enabled",
    flag_values = {"//buildsystem/bazel/configs:msan": "True"},
)

sanitizer(
    name = "tsan",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "tsan_enabled",
    flag_values = {"//buildsystem/bazel/configs:tsan": "True"},
)

sanitizer(
    name = "ubsan",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "ubsan_enabled",
    flag_values = {"//buildsystem/bazel/configs:ubsan": "True"},
)

feature(
    name = "curl",
    build_setting_default = True,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "curl_enabled",
    flag_values = {"//buildsystem/bazel/configs:curl": "True"},
)
