# 🌺💜 Violet.Subprocess: C++20 library for subprocesses in a cross-platform, secure way
# Copyright (c) 2025-2026 Noelware, LLC. <team@noelware.org>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "hang",
    srcs = select({
        "@platforms//os:linux": ["unix/hang.cc"],
        "@platforms//os:macos": ["unix/hang.cc"],
        "@platforms//os:windows": ["windows/hang.cc"],
        "//conditions:default": ["unsupported/hang.cc"],
    }),
    copts = select({
        "@rules_cc//cc/compiler:clang": [
            "-fno-exceptions",
            "-fno-rtti",
        ],
        "@rules_cc//cc/compiler:clang-cl": [
            "/EHs-c-",
            "/GR-",
        ],
        "@rules_cc//cc/compiler:gcc": [
            "-fno-exceptions",
            "-fno-rtti",
        ],
        "@rules_cc//cc/compiler:msvc-cl": [
            "/EHs-c-",
            "/GR-",
        ],
        "//conditions:default": [],
    }),
    local_defines = ["VIOLET_BUILDING"],
    visibility = ["//tests:__subpackages__"],
)

cc_binary(
    name = "print_args",
    srcs = select({
        "@platforms//os:linux": ["unix/print_args.c"],
        "@platforms//os:macos": ["unix/print_args.c"],
        "@platforms//os:windows": ["windows/print_args.c"],
        "//conditions:default": ["unsupported/print_args.c"],
    }),
    conlyopts = ["-std=c23"],
    local_defines = ["VIOLET_BUILDING"],
    visibility = ["//tests:__subpackages__"],
)

cc_binary(
    name = "print_env",
    srcs = select({
        "@platforms//os:linux": ["unix/print_env.c"],
        "@platforms//os:macos": ["unix/print_env.c"],
        "@platforms//os:windows": ["windows/print_env.c"],
        "//conditions:default": ["unsupported/print_env.c"],
    }),
    conlyopts = ["-std=c23"],
    local_defines = ["VIOLET_BUILDING"],
    visibility = ["//tests:__subpackages__"],
)
