# 🌺💜 Violet: Extended C++ standard library
# Copyright (c) 2025-2026 Noelware, LLC. <team@noelware.org>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//buildsystem/bazel:cc.bzl", "violet_cc_library", "violet_cc_test")

package(
    default_visibility = ["//visibility:public"],
)

violet_cc_library(
    name = "clock",
    srcs = ["//src/experimental/time:Clock.cc"],
    hdrs = ["//include/violet/Experimental/Time:Clock.h"],
    deps = [
        ":duration",
        ":instant",
        ":time_point",
    ],
)

violet_cc_library(
    name = "duration",
    srcs = ["//src/experimental/time:Duration.cc"],
    hdrs = ["//include/violet/Experimental/Time:Duration.h"],
    deps = ["//violet/experimental:numeric"],
)

violet_cc_test(
    name = "duration_test",
    srcs = ["//tests/experimental/time:Duration.test.cc"],
    deps = [":duration"],
)

violet_cc_library(
    name = "fake_clock",
    srcs = ["//src/experimental/time:FakeClock.cc"],
    hdrs = ["//include/violet/Experimental/Time:FakeClock.h"],
    deps = [
        ":clock",
        "//violet/experimental:mutex",
    ],
)

violet_cc_library(
    name = "instant",
    hdrs = ["//include/violet/Experimental/Time:Instant.h"],
    deps = [":duration"],
)

violet_cc_test(
    name = "instant_test",
    srcs = ["//tests/experimental/time:Instant.test.cc"],
    deps = [
        ":clock",
        ":instant",
    ],
)

violet_cc_library(
    name = "time_point",
    srcs = ["//src/experimental/time:TimePoint.cc"],
    hdrs = ["//include/violet/Experimental/Time:TimePoint.h"],
    deps = [":duration"],
)

violet_cc_test(
    name = "time_point_test",
    srcs = ["//tests/experimental/time:TimePoint.test.cc"],
    deps = [":time_point"],
)
