# 🌺💜 Violet: Extended C++ standard library
# Copyright (c) 2025-2026 Noelware, LLC. <team@noelware.org>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//buildsystem/bazel:cc.bzl", "cc_library", "cc_test")

# A "uber" library that contains all base Noelware.Violet.IO.Experimental libraries and code
cc_library(
    name = "uber",
    srcs = ["//:dummy.cc"],
    linkstatic = 0,
    visibility = ["//visibility:public"],
    deps = [
        ":buffered_input_stream",
        ":byte_array_input_stream",
        ":file_input_stream",
        ":input_stream",
        ":stdin_input_stream",
        ":string_input_stream",
    ],
)

cc_library(
    name = "input_stream",
    hdrs = ["//include/violet/IO/Experimental:InputStream.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//violet",
        "//violet/io:error",
    ],
)

cc_test(
    name = "input_stream_read_to_string_test",
    srcs = ["//tests/io/experimental/input:ReadToString.test.cc"],
    deps = [":input_stream"],
)

cc_test(
    name = "input_stream_read_lines_test",
    srcs = ["//tests/io/experimental/input:ReadToString.test.cc"],
    deps = [":input_stream"],
)

cc_library(
    name = "buffered_input_stream",
    srcs = ["//src/io/experimental:buffered.cc"],
    hdrs = ["//include/violet/IO/Experimental:BufferedInputStream.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":input_stream",
        "//violet",
        "//violet/io:error",
    ],
)

cc_test(
    name = "buffered_input_stream_test",
    srcs = ["//tests/io/experimental/input:BufferedInputStream.test.cc"],
    deps = [
        ":buffered_input_stream",
        ":byte_array_input_stream",
    ],
)

cc_library(
    name = "byte_array_input_stream",
    srcs = ["//src/io/experimental/input:bytearray.cc"],
    hdrs = ["//include/violet/IO/Experimental/Input:ByteArrayInputStream.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":input_stream",
        "//violet",
        "//violet/io:error",
    ],
)

cc_test(
    name = "byte_array_input_stream_test",
    srcs = ["//tests/io/experimental/input:ByteArrayInputStream.test.cc"],
    deps = [":byte_array_input_stream"],
)

cc_library(
    name = "file_input_stream",
    srcs = ["//src/io/experimental/input:file.cc"] + select({
        "@platforms//os:linux": ["//src/io/experimental/input/file:unix.cc"],
        "@platforms//os:macos": ["//src/io/experimental/input/file:unix.cc"],
        "@platforms//os:windows": ["//src/io/experimental/input/file:windows.cc"],
        "//conditions:default": ["//src/io/experimental/input/file:unsupported.cc"],
    }),
    hdrs = ["//include/violet/IO/Experimental/Input:FileInputStream.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":input_stream",
        "//violet",
        "//violet/filesystem:file",
        "//violet/io:error",
    ],
)

cc_test(
    name = "file_input_stream_test",
    srcs = ["//tests/io/experimental/input:FileInputStream.test.cc"],
    data = ["//tests/io/experimental/input:runfiles/loveletter.txt"],
    with_gtest_main = False,
    deps = [
        ":file_input_stream",
        "//violet/testing:runfiles",
        "//violet/testing:runfiles_main",
    ],
)

cc_library(
    name = "stdin_input_stream",
    srcs = ["//src/io/experimental/input:stdin.cc"],
    hdrs = ["//include/violet/IO/Experimental/Input:StdinInputStream.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":input_stream",
        "//violet",
        "//violet/io:descriptor",
        "//violet/io:error",
    ],
)

cc_library(
    name = "string_input_stream",
    srcs = ["//src/io/experimental/input:string.cc"],
    hdrs = ["//include/violet/IO/Experimental/Input:StringInputStream.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":input_stream",
        "//violet",
        "//violet/io:descriptor",
        "//violet/io:error",
    ],
)

# cc_library(
#     name = "output_stream",
#     hdrs = ["//include/violet/IO/Experimental:OutputStream.h"],
#     visibility = ["//visibility:public"],
#     deps = [
#         "//violet",
#         "//violet/io:error",
#     ],
# )

# cc_library(
#     name = "byte_array_output_stream",
#     srcs = ["//src/io/experimental/output:bytearray.cc"],
#     hdrs = ["//include/violet/IO/Experimental/Output:ByteArrayOutputStream.h"],
#     visibility = ["//visibility:public"],
#     deps = [
#         ":output_stream",
#         "//violet",
#         "//violet/io:error",
#     ],
# )

# cc_library(
#     name = "file_output_stream",
#     srcs = ["//src/io/experimental/output:file.cc"],
#     hdrs = ["//include/violet/IO/Experimental/Output:FileOutputStream.h"],
#     visibility = ["//visibility:public"],
#     deps = [
#         ":input_stream",
#         "//violet",
#         "//violet/filesystem:file",
#         "//violet/io:error",
#     ],
# )

# cc_library(
#     name = "stderr_output_stream",
#     srcs = ["//src/io/experimental/output:stderr.cc"],
#     hdrs = ["//include/violet/IO/Experimental/Output:StderrOutputStream.h"],
#     visibility = ["//visibility:public"],
#     deps = [
#         ":output_stream",
#         "//violet",
#         "//violet/io:descriptor",
#         "//violet/io:error",
#     ],
# )

# cc_library(
#     name = "stdout_output_stream",
#     srcs = ["//src/io/experimental/output:stdout.cc"],
#     hdrs = ["//include/violet/IO/Experimental/Output:StdoutOutputStream.h"],
#     visibility = ["//visibility:public"],
#     deps = [
#         ":output_stream",
#         "//violet",
#         "//violet/io:descriptor",
#         "//violet/io:error",
#     ],
# )

# cc_library(
#     name = "string_output_stream",
#     srcs = ["//src/io/experimental/output:string.cc"],
#     hdrs = ["//include/violet/IO/Experimental/Output:StringOutputStream.h"],
#     visibility = ["//visibility:public"],
#     deps = [
#         ":output_stream",
#         "//violet",
#         "//violet/io:error",
#     ],
# )
