# 🌺💜 Violet: Extended standard library for C++26
# Copyright (c) 2025 Noelware, LLC. <team@noelware.org> & other contributors
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "adapters",
    deps = [
        ":enumerate",
        ":filter",
        ":filtermap",
        ":map",
        ":peekable",
        ":skip",
        ":take",
    ],
)

cc_library(
    name = "pipes",
    hdrs = ["Pipes.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "enumerate",
    hdrs = ["Enumerate.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":pipes",
        "//violet",
        "//violet/container:optional",
        "//violet/iter",
    ],
)

cc_test(
    name = "enumerate_test",
    size = "small",
    srcs = ["Enumerate.test.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":enumerate",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "filter",
    hdrs = ["Filter.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":pipes",
        "//violet",
        "//violet/container:optional",
        "//violet/iter",
    ],
)

cc_test(
    name = "filter_test",
    size = "small",
    srcs = ["Filter.test.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":filter",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "filtermap",
    hdrs = ["FilterMap.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":pipes",
        "//violet",
        "//violet/container:optional",
        "//violet/iter",
    ],
)

cc_test(
    name = "filtermap_test",
    size = "small",
    srcs = ["FilterMap.test.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":filtermap",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "map",
    hdrs = ["Map.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":pipes",
        "//violet",
        "//violet/container:optional",
        "//violet/iter",
    ],
)

cc_test(
    name = "map_test",
    size = "small",
    srcs = ["Map.test.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":map",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "peekable",
    hdrs = ["Peekable.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":pipes",
        "//violet",
        "//violet/container:optional",
        "//violet/iter",
    ],
)

cc_test(
    name = "peekable_test",
    size = "small",
    srcs = ["Peekable.test.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":peekable",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "skip",
    hdrs = ["Skip.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":pipes",
        "//violet",
        "//violet/container:optional",
        "//violet/iter",
    ],
)

cc_test(
    name = "skip_test",
    size = "small",
    srcs = ["Skip.test.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":enumerate",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "take",
    hdrs = ["Take.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":pipes",
        "//violet",
        "//violet/container:optional",
        "//violet/iter",
    ],
)

cc_test(
    name = "take_test",
    size = "small",
    srcs = ["Take.test.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":enumerate",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
